# agentic_data_analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  mvp_plan.md  parse_replay.py  pyproject.toml
.github/: copilot-instructions.md
agents/: communication-agent.md  data-profiler.md  data-retrieval-agent.md  findings-validator.md  opportunity-identifier.md  pattern-discoverer.md  question-framer.md  relationship-analyzer.md  root-cause-investigator.md  synthesizer-agent.md  time-series-analyzer.md
akv/: akv_secret_retrieval.py
config/: pipeline_config.yaml
context/domains/: tpo_insights.md  walmart-ogp.md  walmart-opd-weekly-alsip.md  walmart-opd.md
context/semantic_models/: _TEMPLATE.yaml  tpo_insights.yaml  walmart-opd-weekly-alsip.yaml  walmart-opd.yaml  walmart-opd.yaml.bak  walmart_in_store_execution.example.yaml
data/generators/: generate_smoke_test.py  generate_walmart_opd.py
docs/: architecture.md  dev-roadmap.md  quick-reference.md  walkthrough.md
docs/examples/: README.md  smoke-test-output.md  walmart-ogp-first-real-run.md  walmart-opd-first-real-run.md
orchestration/: artifact-schemas.md  failure-recovery.md  pipeline-definitions.md
queries/: walmart-opd-weekly-alsip.sql
schedules/: Dockerfile  create_docker_image.py  environment.yml  walmart_opd_weekly.py
schedules/configs/: config.json
scratch/: delivery_coverage_diagnostic.sql  test_delivery_merch_joins.py
scripts/: add_delivery_merch_columns.sql  create_bridge_views.sql  create_opd_weekly_view.sql  migrate_ado_to_github_reviewed.sh  recreate_semantic_view.sql  recreate_semantic_view.sql.bak  refresh_walmart_standardized_data.sql
skills/: README.md
skills/analytical/: benchmarking-methods.md  change-point-detection.md  clustering-algorithms.md  cohort-analysis.md  confounding-analysis.md  correlation-analysis.md  counterfactual-reasoning.md  cross-run-synthesis.md  cross-tabulation.md  effect-size-calculation.md  group-comparison.md  hypothesis-generation-from-data.md  hypothesis-testing.md  interaction-detection.md  outlier-typology.md  performance-gap-analysis.md  predictive-readiness-assessment.md  simpsons-paradox-check.md  stl-decomposition.md
skills/domain-specific/: cpg-derived-metrics.md  guardrail-metric-pairing.md
skills/output/: confidence-language.md  descriptive-summary-format.md  insight-first-formatting.md  proactive-action-card.md  stakeholder-communication.md  visualization-recommendations.md
skills/universal/: analysis-design-spec.md  close-the-loop.md  data-quality-standards.md  ethical-analysis.md  resistant-statistics.md  statistical-rigor.md  structured-output-contract.md  tracking-gaps.md  triangulation.md
skills/validation/: guardrail-pairing-check.md  statistical-revalidation.md
src/: __init__.py  main.py
src/api/: claude_client.py  litellm_client.py  llm_client.py
src/data_access/: cortex_agent_client.py  cortex_analyst_client.py  excel_loader.py  (+2 more)
tests/: test_artifact_schemas.py  test_budget_tracker.py  test_cortex_scaffolding.py  test_data_loading.py  test_hitl_gate.py  test_llm_client_abstraction.py  test_pipeline_composition.py  test_pipeline_executor_integration.py  test_prompt_assembly.py  test_run_logger.py  test_synthesizer.py
tools/: __init__.py  notify_teams.py
webapp/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
(+92 files in other folders)
