[project]
name = "agentic-data-analyst"
version = "0.1.0"
description = "AI-powered exploratory data analyst tool — embeds senior-analyst-level rigor across CPG functional domains"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "anthropic>=0.40.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "RUF",      # ruff-specific
]
ignore = [
    "E501",     # line length — handled by formatter
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = false
# Pydantic v2 + pandas: relax in places where the typing churn isn't worth fighting
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]
